fixed side section overflow and moved progress bar to center

--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,9 @@ body {
   grid-row-start: 6;
   grid-row-end: 7;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #temp-box {
